--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
   "dependencies": {
     "chrome-location": "^1.2.1",
     "node-chromedriver-downloader": "^0.9.2",
-    "selenium-webdriver": "^4.0.0-alpha.8"
+    "selenium-webdriver": "^4.9.2"
   },
   "devDependencies": {
-    "@types/selenium-webdriver": "^4.0.10",
+    "@types/selenium-webdriver": "^4.1.14",
     "prettier": "2.2.1"
   }
 }
